--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "title": "Clean Blog Jekyll",
+    "title": "Final Lab Report",
     "name": "startbootstrap-clean-blog-jekyll",
     "version": "4.0.12",
     "description": "Clean Blog is a Medium inspired blog theme for Bootstrap.",
